Added a site layout

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Contact Us</h1>
+<p>Need help?, contact us via email! <a herf="www.google.com>">just a link to google<a></p>
